mType/tests/testFiles/error/error/typeReturnTypeMismatch.mt
function getString(): string {
    return 42;
}